padding correction on footer ul / font-size on mobile device

--- a/css/main.css
+++ b/css/main.css
@@ -503,11 +503,6 @@ button:hover {
 .contact_form_title {
   display: block;
   width: 100%;
-  font-size: 39px;
-  color: #333333;
-  line-height: 1.2;
-  text-align: left;
-  padding-bottom: 44px;
 }
 
 
@@ -630,14 +625,19 @@ footer{
   width:100%;
   height:80px;
   background-color:black;
-  display:flex;
+  /* display:flex;
   justify-content: center;
-  align-items:center;
+  align-items:center; */
+}
+
+footer ul{
+  text-align:center;
+
 }
 
 footer li{
   display:inline-block;
-  margin:10px 10px 0 10px;
+  margin:25px 10px 0 10px;
 }
 
 footer i{
@@ -788,6 +788,12 @@ footer i:hover{
     top:0;
     left:9px;
   }
+
+  .title_project_more input:checked~i{
+    top:-5px;;
+    left:-30px;
+  }
+
 }
 
 @keyframes bounce{
